--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,12 @@
                         "styles": [
                             "./node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "@angular/material/prebuilt-themes/indigo-pink.css",
+                            "./node_modules/cropperjs/dist/cropper.css",
                             "src/styles.scss"
                         ],
                         "scripts": [
-                            "./node_modules/bootstrap/dist/js/bootstrap.js"
+                            "./node_modules/bootstrap/dist/js/bootstrap.js",
+                            "./node_modules/cropperjs/dist/cropper.js"
                         ]
                     },
                     "configurations": {
